--- a/src/renderer/assets/styles/common.scss
+++ b/src/renderer/assets/styles/common.scss
@@ -74,6 +74,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
 .f-m-l-10{margin-left: 10px;}
 .f-m-l-20{margin-left: 20px;}
 .f-m-l-30{margin-left: 30px;}
+.f-m-l-50{margin-left: 50px;}
 .f-m-b-5{margin-bottom: 5px;}
 .f-m-b-20{margin-bottom: 20px;}
 
